Add new product

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,8 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 android.enableJetifier=true
+
+RELEASE_STORE_FILE=RMKeystore
+RELEASE_STORE_PASSWORD=rmpromotion
+RELEASE_KEY_ALIAS=rmpromotion
+RELEASE_KEY_PASSWORD=rmpromotion
