--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,7 +76,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'com.amitshekhar.android:android-networking:1.0.2'
     implementation 'com.google.code.gson:gson:2.9.1'
 
     implementation 'com.sunmi:sunmiui:1.1.27'
@@ -87,4 +86,10 @@ dependencies {
     implementation files('libs/PayLib-release-1.4.37-sources.jar')
     implementation files('libs/lib-qrgenerate-20220905-1249.jar')
 
+    // define a BOM and its version
+    implementation platform("com.squareup.okhttp3:okhttp-bom:4.10.0")
+
+    // define any required OkHttp artifacts without version
+    implementation "com.squareup.okhttp3:okhttp"
+    implementation "com.squareup.okhttp3:logging-interceptor"
 }
